<resources>
    <string name="app_name">MyHome</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="menu_settings">Settings</string>
    <!-- Login titles -->
    <string name="login_header">Login Details</string>
    <string name="login_title">Login Name</string>
    <string name="pass_title">Password</string>

    <!-- Connection settings titles -->
    <string name="connection_header">Connection Settings</string>

    <string name="domo_ip">Domoticz IP</string>
    <string name="domo_port">Port Number</string>
    <string name="polling_delay">Polling Delay</string>
    <string name="use_https">Use HTTPS</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>